--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,11 @@ body{
 a{
   color: white;
 }
+@media only screen and (max-width: 900px){
+  body{
+    overflow-x: hidden;
+  }
+}
 
 @keyframe fade-in{
   100%{
