--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -54,6 +54,9 @@
 }
 @media only screen and (max-width: 950px) and (orientation: portrait){
     .contact{
+        width: 100%;
+        overflow-x: hidden;
+        margin:0;
         background: url('../Assets/contactvb.jpg');
         background-size: cover;
         background-attachment: fixed;
