--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -60,8 +60,9 @@
 }
 @media only screen and (max-width: 750px){
     .footer{
+        width: 100%;
+        overflow-x: hidden;
         height: 25vh;
-        flex: 90%;
     }
     .logoSide{
         padding-left: 2%;
