--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -218,6 +218,7 @@
     }
     .logo{
         background-size: 60vw;
+        background-attachment: scroll;
         background-position: top 40% left 50%;
     }
     .welcomeText h1{
