--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,11 @@ body{
 a{
   color: white;
 }
+h1{
+  font-family: Oswald, sans-serif;
+  font-weight: 400;
+  font-style: sans-serif;
+}
 @media only screen and (max-width: 900px){
   body{
     overflow-x: hidden;
