--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -19,7 +19,7 @@
     background-repeat: no-repeat;
 }
 .options{
-    width: 70%;
+    width: 80%;
     border-radius: 15px;
     padding-left: 2%;
     padding-bottom: 3%;
@@ -40,6 +40,12 @@
 .headerSide h1{
     margin-bottom: 4%;
 }
+.headerSide a{
+    color: black;
+    text-decoration: underline 20%;
+    font-size: 25px;
+    margin-bottom: 0;
+}
 .headerSide p{
     font-size: 25px;
     margin-bottom: 0;
@@ -52,7 +58,7 @@
     flex-direction: column;
     justify-content: center;
 }
-@media only screen and (max-width: 950px) and (orientation: portrait){
+@media only screen and (max-width: 950px){
     .contact{
         width: 100%;
         overflow-x: hidden;
@@ -81,6 +87,12 @@
         padding-left: 0;
         width: 75%;
         flex: 50%;
+    }
+    .headerSide a{
+        font-size: 20px;
+    }
+    .options{
+        width: 85%;
     }
     .formSide{
         flex: 50%;
