--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -65,16 +65,18 @@
         height: 25vh;
     }
     .logoSide{
-        padding-left: 2%;
-        padding-top: 30px;
+        padding-left: 0;
         flex: 80%;
     }
     .logoSide img{
-        width: 80px;
-        padding-bottom: 70px;
+        width: 70px;
+        padding-bottom: 50px;
     }
-    .logoSide a{
-        font-size: 15px;
+    .logolink{
+        padding-left: 0;
+    }
+    .summary a{
+        font-size: 13px;
         padding-left: 15%;
     }
     .summary{
