--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -66,7 +66,7 @@
     }
     .logoSide{
         padding-left: 0;
-        flex: 80%;
+        flex: 75%;
     }
     .logoSide img{
         width: 70px;
@@ -81,10 +81,11 @@
     }
     .summary{
         padding-bottom: 20px;
+        padding-right: 10%;
     }
     .socialMedia{
-        flex: 20%;
-        padding-left: 5%;
+        flex: 25%;
+        padding-left: 0;
     }
     .socialMedia h2{
         display: none;
