--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -47,9 +47,14 @@
     border-radius: 10px;
     border: 2px solid black;
     transition: all 0.3s;
+    color: black;
 }
 .submitForm:hover{
     cursor: pointer;
     transform: scale(1.03);
 }
-
+@media only screen and (max-width: 850px){
+    .formContainer{
+        padding-right: 3%;
+    }
+}
