--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -87,6 +87,7 @@
         padding-left: 0;
         width: 75%;
         flex: 50%;
+        height: 100%;
     }
     .headerSide a{
         font-size: 20px;
@@ -98,6 +99,7 @@
         flex: 50%;
         margin-top: 4%;
         width: 100%;
+        height: 100%;
         padding-top: 0;
         padding-left: 0;
         display: flex;
