--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -20,7 +20,7 @@
 .input{
     display: flex;
     flex-direction: column;
-    width: 80%;    
+    width: 80%; 
 }
 .input label{
     font-size: 25px;
@@ -55,6 +55,12 @@
 }
 @media only screen and (max-width: 850px){
     .formContainer{
+        padding-right: 0%;
+    }
+    .input{
         padding-right: 3%;
+    }
+    .inputfield{
+        width: 100%;
     }
 }
