--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -11,7 +11,8 @@
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
     background: url('../Assets/contactforeground.png');
     background-size: cover;
     background-attachment: scroll;
@@ -57,6 +58,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    height: 100%;
 }
 @media only screen and (max-width: 950px){
     .contact{
@@ -113,5 +115,11 @@
     }
     .foreground p{
         font-size: 20px;
+    }
+    .headerSide{
+        padding-top: 80px;
+    }
+    .formSide{
+        height: 100%;
     }
 }
