--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -83,7 +83,7 @@
         background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../Assets/servicevertical.jpg');
         top:0;
         left:0;
-        background-size: cover;
+        background-size: 100vh;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center;
