--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -11,7 +11,7 @@
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     background: url('../Assets/contactforeground.png');
     background-size: cover;
