--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,7 +1,7 @@
 .contact{
     width: 100%;
-    height: 100%;
-    background: url('../Assets/contactbg.jpg');
+    height: 100vh;
+    background: #E5E5E5;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -13,11 +13,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background: url('../Assets/contactforeground.png');
-    background-size: cover;
+    background: url('../Assets/noise.png');
     background-attachment: scroll;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
 }
 .options{
     width: 80%;
@@ -54,7 +52,7 @@
 }
 .formSide{
     flex: 60%;
-    padding-top: 150px;
+    padding-top: 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,6 +61,7 @@
 @media only screen and (max-width: 950px){
     .contact{
         width: 100%;
+        height: 150vh;
         overflow-x: hidden;
         margin:0;
         background: url('../Assets/contactvb.jpg');
@@ -85,10 +84,10 @@
         font-size: 20px;
     }
     .headerSide{
-        padding-top: 120px;
+        padding-top: 40px;
         padding-left: 0;
         width: 75%;
-        flex: 50%;
+        flex: 30%;
         height: 100%;
     }
     .headerSide a{
@@ -98,8 +97,8 @@
         width: 85%;
     }
     .formSide{
-        flex: 50%;
-        margin-top: 4%;
+        flex: 70%;
+        margin-top: 0;
         width: 100%;
         height: 100%;
         padding-top: 0;
